--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -95,7 +95,7 @@ figure {
 	margin:0;
 }
 fieldset {
-	border:1px solid #c0c0c0;
+	border:1px solid #000;
 	margin:0 2px;
 	padding:0.35em 0.625em 0.75em;
 }
