--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1020,7 +1020,7 @@ body:not(.post-template) .post-title {
 	max-width:900px;
 	margin:0px auto;
 	margin-top:-100px;
-	background:#fff;
+	background:#000;
 	position:relative;
 	padding:40px 50px;
 	font-weight:300;
