--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1028,7 +1028,7 @@ body:not(.post-template) .post-title {
 	overflow:hidden;
 }
 .site-wrapper {
-	background-color:lightblue;
+	background-color:#000;
 }
 .sidebar {
 	width:25%;
