--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -852,7 +852,7 @@ body.nav-opened .nav {
 	color:rgba(0,0,0,0.8);
 }
 .no-cover .page-description {
-	color: rgba(255,255,255,0);
+	color: rgba(0,0,0,0.5);
 }
 /* Add subtle load-in animation for content on the home page */
 .home-template .page-title {
@@ -1250,7 +1250,7 @@ h2.widget-title {
 	font-size:2.1rem;
 	line-height:1.5em;
 	font-weight:200;
-	color:#50585D;
+	color:#fff;
 	font-style:italic;
 	letter-spacing:0;
 	text-indent:0;
