--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1250,7 +1250,7 @@ h2.widget-title {
 	font-size:2.1rem;
 	line-height:1.5em;
 	font-weight:200;
-	color:#fff;
+	color:#ffffff;
 	font-style:italic;
 	letter-spacing:0;
 	text-indent:0;
