--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -216,7 +216,7 @@ body {
 	letter-spacing:0.01rem;
 	font-size:1.7rem;
 	line-height:1.75em;
-	color:#333;
+	color:#fff;
 	-webkit-font-feature-settings:'kern' 1;
 	-moz-font-feature-settings:'kern' 1;
 	-o-font-feature-settings:'kern' 1;
