--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -652,7 +652,7 @@ body.nav-opened .nav {
 	height:1px;
 }
 .nav a:link,.nav a:visited {
-	color:#B8B8B8;
+	color:#fff;
 }
 .nav li.nav-current a,.nav a:hover,.nav a:active,.nav a:focus {
 	color: #fff;
