--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1134,7 +1134,7 @@ h2.widget-title {
 	font-size:1.4rem;
 	line-height:1;
 	font-style:italic;
-	color:#9EABB3;
+	color:#fff;
 }
 .author-meta a {
 	color:#9EABB3;
