--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1140,7 +1140,7 @@ h2.widget-title {
 	color:#9EABB3;
 }
 .author-meta a:hover {
-	color: #111;
+	color: #fff;
 }
 /* Create some space to the right for the share links */
 .post-footer .author {
