--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2244,7 +2244,7 @@ div#preloader {
 	-moz-border-radius:6px;
 	border-radius:6px;
 	background:#ccc;
-	color:#222;
+	color:#fff;
 }
 .slicknav_nav .slicknav_txtnode {
 	margin-left:15px;
