--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2243,7 +2243,7 @@ div#preloader {
 	-webkit-border-radius:6px;
 	-moz-border-radius:6px;
 	border-radius:6px;
-	background:#ccc;
+	background:#fff;
 	color:#fff;
 }
 .slicknav_nav .slicknav_txtnode {
